--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  toaster_linear: 
+  #toaster_linear: 
+  path_provider: ^0.5.0+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -24,6 +25,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
 
 
 # For information on the generic Dart part of this file, see the
