--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,9 @@ dependencies:
   flutter:
     sdk: flutter
   #toaster_linear: 
-  path_provider: ^0.5.0+1
+  #path_provider: ^0.5.0+1
+  #cloud_firestore:
+  firebase_database:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
